added logic for "type" input, renamed github-token to repo-token

--- a/action.yml
+++ b/action.yml
@@ -2,8 +2,8 @@ name: SemVer tagger
 description: Tag commit with the next semver 
 author: Drill4j
 inputs: 
-  github-token:
-    description: GITHUB_TOKEN secret
+  repo-token:
+    description: github access token secret
   type:
     description:  prerelease | patch
     default: prerelease
