--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@actions/core": "^1.2.2",
     "@actions/github": "^2.1.1",
+    "@actions/exec": "^1.0.3",
     "@drill4j/semver": "0.4.0"
   }
 }
