--- a/package.json
+++ b/package.json
@@ -8,10 +8,20 @@
     "type": "git",
     "url": "https://github.com/Drill4J/semver-tag-action.git"
   },
-  "main": "index.js",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "rollup -c"
+  },
   "dependencies": {
     "@actions/core": "^1.2.2",
     "@actions/exec": "^1.0.3",
     "@drill4j/semver": "0.4.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "rollup": "^1.31.1",
+    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup-plugin-terser": "^5.2.0"
   }
 }
