--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
-    "rollup": "^1.31.1",
-    "rollup-plugin-auto-external": "^2.0.0",
-    "rollup-plugin-terser": "^5.2.0"
+    "rollup": "^1.31.1"
   }
 }
