--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@actions/core": "^1.2.2",
     "@actions/exec": "^1.0.3",
-    "@drill4j/semver": "0.4.0"
+    "semver": "7.5.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
